// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when busy 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
    >
      Email address
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          autoComplete="email"
          className="input"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="buttonContainer"
  >
    <button
      className="cancelButton"
      disabled={true}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Cancel"
          id="forgotPasswordForm.cancelButtonText"
        />
      </span>
    </button>
    <button
      className="submitButton"
      disabled={true}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Submit"
          id="forgotPasswordForm.submitButtonText"
        />
      </span>
    </button>
  </div>
</form>
`;

exports[`renders when not busy 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
    >
      Email address
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          autoComplete="email"
          className="input"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="buttonContainer"
  >
    <button
      className="cancelButton"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Cancel"
          id="forgotPasswordForm.cancelButtonText"
        />
      </span>
    </button>
    <button
      className="submitButton"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Submit"
          id="forgotPasswordForm.submitButtonText"
        />
      </span>
    </button>
  </div>
</form>
`;
